# smart-planner

./: .env.example  .gitignore  README.md  pyproject.toml  start_server.sh  start_streamlit.sh
app/: __init__.py
app/agent/: __init__.py  prompts.py  react_agent.py  types.py
app/api/: __init__.py  main.py  routes.py  schemas.py
app/config/: __init__.py  settings.py
app/db/: __init__.py  dynamodb.py
app/session/: __init__.py  manager.py  models.py  title_generator.py
app/tools/: __init__.py  base.py  calendar.py  registry.py  weather.py  web_search.py
app/ui/: __init__.py  app.py
infra/: docker-compose.yml
